# metatorio-calc

./: .gitignore  .ignore  Cargo.toml  LICENSE  PERFORMANCE_IMPROVEMENTS.md  README.md  build.rs
.github/workflows/: README.md  build-and-release.yml
assets/: LICENSE
src/: concept.rs  context.rs  dyn_deserialize.rs  dyn_serde.rs  error.rs  lp.rs  main.rs  relation.rs  solver.rs  toast.rs  types.rs  update.rs
src/concept/: mod.rs
src/ctx/: mod.rs
src/ctx/factorio/: common.rs  context.rs  entity.rs  fluid.rs  format.rs  item.rs  mining.rs  mod.rs  module.rs  quality.rs  recipe.rs  spec.rs  ui.rs  view.rs
src/factorio/: common.rs  context.rs  entity.rs  fluid.rs  format.rs  item.rs  mining.rs  mod.rs  module.rs  recipe.rs  view.rs
src/factorio/editor/: clipboard.rs  hover.rs  icon.rs  mod.rs  modal.rs  planner.rs  reverse_selector.rs  selector.rs  style.rs
src/factorio/model/: context.rs  energy.rs  entity.rs  fluid.rs  item.rs  mining.rs  mod.rs  module.rs  planet.rs  quality.rs  recipe.rs  source.rs  tile.rs
src/solver/: mod.rs
