[package]
name = "metatorio"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
dotenv = "0.15.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
env_logger = "0.11.8"
good_lp = { "version" = "1.14.2", default-features = false, features = ["microlp"] }
image = { version = "0.25.9", features = ["png"] }
log = "0.4.29"
regex = "1.12.2"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
