[package]
name = "metatorio"
version = "1.0.0-rc2"
edition = "2024"

[dependencies]
dirs = "6.0.0"
dotenv = "0.15.0"
dyn-clone = "1.0.20"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui-toast = "0.19.1"
egui_dnd = "0.14.0"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
env_logger = "0.11.8"
erased-serde = "0.4.9"
good_lp = { "version" = "1.14.2", default-features = false, features = ["microlp"] }
image = { version = "0.25.9", features = ["png"] }
indexmap = { version = "2.13.0", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.29"
mimalloc = "0.1.48"
regex = "1.12.2"
rfd = "0.16.0"
self_update = "0.42.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
winresource = "0.1.30"
# build.rs
